work with print models and adjust views

--- a/ASPDataWork/Views/Home/Index.cshtml
+++ b/ASPDataWork/Views/Home/Index.cshtml
@@ -3,6 +3,15 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">LESSON 2 DATA</h1>
+</div>
+<hr size="3" color="black"/>
+<div>
+    <nav class="nav nav-pills flex-column flex-sm-row">
+        <a class="flex-sm-fill text-sm-center nav-link" asp-controller="Home" asp-action="PrintValue"> First </a>
+        <a class="flex-sm-fill text-sm-center nav-link" asp-controller="Home" asp-action="PrintValue"> Second </a>
+        <a class="flex-sm-fill text-sm-center nav-link" asp-controller="Home" asp-action="PrintValue"> Third </a>
+        <a class="flex-sm-fill text-sm-center nav-link" asp-controller="Home" asp-action="PrintValue"> Fourth </a>
+        <a class="flex-sm-fill text-sm-center nav-link" asp-controller="Home" asp-action="PrintValue"> Fifth </a>
+    </nav>
 </div>
