--- a/ASPDataWork/Views/Home/Index.cshtml
+++ b/ASPDataWork/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <div>
     <nav class="nav nav-pills flex-column flex-sm-row">
         <a class="flex-sm-fill text-sm-center nav-link" asp-controller="Home" asp-action="PrintValue"> First </a>
-        <a class="flex-sm-fill text-sm-center nav-link" asp-controller="Home" asp-action="PrintValue"> Second </a>
+        <a class="flex-sm-fill text-sm-center nav-link" asp-controller="Home" asp-action="PrintValueCollection"> Second </a>
         <a class="flex-sm-fill text-sm-center nav-link" asp-controller="Home" asp-action="PrintValue"> Third </a>
         <a class="flex-sm-fill text-sm-center nav-link" asp-controller="Home" asp-action="PrintValue"> Fourth </a>
         <a class="flex-sm-fill text-sm-center nav-link" asp-controller="Home" asp-action="PrintValue"> Fifth </a>
