--- a/ASPDataWork/wwwroot/css/site.css
+++ b/ASPDataWork/wwwroot/css/site.css
@@ -1,22 +1,66 @@
+/* Общие стили */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
+    html {
+        font-size: 16px;
+    }
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: #f4f4f4;
+    font-family: 'Montserrat', sans-serif;
 }
+
+/* Стили для фокуса */
+.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+}
+
+/* Карточка формы */
+.card {
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-top: 20px;
+}
+
+    /* Стили для лейблов формы */
+    .card .form-label {
+        font-weight: 600;
+        color: #333;
+    }
+
+    /* Стили для полей ввода */
+    .card .form-control {
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        padding: 10px;
+        font-size: 14px;
+        transition: border-color 0.3s, box-shadow 0.3s;
+    }
+
+        .card .form-control:focus {
+            border-color: #258cfb;
+            box-shadow: 0 0 5px rgba(37, 140, 251, 0.5);
+        }
+
+/* Стили для кнопки */
+.btn-primary {
+    background-color: #258cfb;
+    border-color: #258cfb;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+    .btn-primary:hover {
+        background-color: #206cc8;
+        transform: scale(1.05);
+    }
+
+    .btn-primary:focus {
+        box-shadow: 0 0 0 0.2rem rgba(37, 140, 251, 0.5);
+    }
